--- a/docs/异常处理.md
+++ b/docs/异常处理.md
@@ -1,4 +1,4 @@
-这里的异常处理主要针对三点
+这里的异常处理主要针对四点
 
 * 对于 Provider 抛出的异常，递归清空其堆栈信息，完整异常通过 log 记录。可以在配置选择不清空
 
@@ -27,3 +27,7 @@
   >   - top.glidea.xxxxx.CustomException
   >   - xxx.yyy
   >  ```
+* 处理孤儿异常
+  >  * 孤儿异常指的是，Netty IO 线程中无法找到对应请求的 SequenceId 的异常。
+  >  * 例如作为Consumer接收消息时的序列化，压缩异常等
+  >  * 将其包装为 RpcException，并打印，方便辨认
